src/app/components/moonbase/info/info-moonboxes/info-moonboxes.component.scss
@import "includes";
section.info-moonboxes {
    display: block;
    flex-direction: column;
    max-width: 770px;
    width: 100%;
    margin-top: 00px;
    margin-bottom: 180px;
    justify-content: center;
    align-items: center;
}

.box-card {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    align-items: center;
    max-width: 170px;
    height: 100%;
    .rounded-container {
        width: 160px;
        height: 160px;
        border: 1px solid $primary;
        border-radius: 50%;
        text-align: center;
    }
    img.rounded-image {
        width: 150px;
        height: 150px;
        border-radius: 50%;
        text-align: center;
        padding: 10px;
        border: 1px solid $primary;
        margin-bottom: 15px;
    }
    .desc {
        p {
            font-family: $primary-font;
            font-size: 18px;
            font-weight: bold;
            font-stretch: normal;
            font-style: normal;
            line-height: 1.5;
            letter-spacing: normal;
            text-align: center;
            color: $primary;
        }
        .quantity {
            font-weight: 500;
        }
    }
}

.all-boxes {
    display: grid;
    max-width: 770px;
    grid-template-columns: repeat(auto-fill, minmax(170px, 0fr));
    align-items: flex-start;
    justify-content: center;
    grid-gap: 30px;
    .box-container {
        width: 100%;
        height: 100%;
    }
}

.all-boxes-mobile {
    display: none;
    max-width: 500px;
    width: 100%;
    .box-container {
        width: 170px;
        height: 170px;
    }
}

.detail-container {
    display: flex;
    flex-direction: row;
    margin-top: 50px;
    justify-content: space-between;
    align-items: flex-start;
    width: 100%;
    .heading-container {
        font-family: "Orbitron";
        font-size: 30px;
        font-weight: 900;
        font-stretch: normal;
        font-style: normal;
        line-height: 1.2;
        letter-spacing: normal;
        text-align: left;
        color: #d5a642;
        border-top: 3px solid $primary;
        max-width: 370px;
        width: 100%;
    }
    .description-container {
        display: flex;
        flex-direction: column;
        max-width: 340px;
        width: 100%;
        justify-content: center;
        align-items: center;
        border-top: 1px solid $primary;
        font-weight: 400;
    }
    .buttons-container {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        align-items: center;
        width: 100%;
    }
    .info-text {
        font-family: $primary-font;
        font-size: 16px;
        font-weight: 400;
        font-stretch: normal;
        font-style: normal;
        line-height: 1.69;
        letter-spacing: normal;
        text-align: left;
        color: $primary;
    }
    .buy-moonshot-button,
    .read-more-button {
        display: flex;
        width: 100%;
        margin-bottom: 20px;
        .button,
        .outlined-button {
            min-width: 170px;
            width: 100%;
            font-size: 16px;
            height: 40px;
            padding: 0px 15px;
            display: flex;
            flex-direction: column;
            justify-content: center;
            align-items: center;
            font-size: 16px;
            font-weight: bold;
            font-stretch: normal;
            font-style: normal;
            line-height: 1.69;
            letter-spacing: normal;
            text-align: center;
        }
    }
    .arrow-down {
        width: 40px;
        height: 40px;
        .round-mini-button {
            width: 40px;
            height: 40px;
            border-radius: 50%;
        }
    }
}

.break-line-mobile {
    display: none;
}

.tier-table {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    width: 100%;
    max-width: 270px;
    padding-bottom: 30px;
    .table-columns-titles {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: space-between;
        font-weight: 700;
        width: 100%;
        border-bottom: 1px solid $primary;
        padding-bottom: 10px;
        .pr {
            padding-right: 30px;
        }
    }
    .table-columns {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        align-items: space-between;
        width: 100%;
        padding-top: 10px;
        font-weight: 400;
        .item {
            display: flex;
            flex-direction: row;
            justify-content: space-between;
            align-items: space-between;
            padding-bottom: 8px;
        }
    }
}

@media only screen and (max-width: $sm) {
    .detail-container .description-container {
        max-width: 100%;
    }
    .tier-table {
        max-width: 100%;
        // .table-columns-titles {
        //     .pr {
        //         padding-right: 0px;
        //     }
        // }
    }
}

@media only screen and (max-width: 810px) {
    section.info-moonboxes {
        padding-top: 100px;
        max-width: 500px;
        width: calc(100vw - 40px);
    }
    .all-boxes {
        display: none;
    }
    .all-boxes-mobile {
        display: flex;
        align-items: center;
        flex-direction: row;
        justify-content: space-between;
        max-width: 700px;
        width: 100%;
        .box-container {
            margin-bottom: -60px;
        }
    }
    .detail-container {
        margin-top: 110px;
        flex-direction: column;
        max-width: 400px;
        width: 100%;
        .description-container {
            border-top: none;
            max-width: 400px;
        }
        .heading-container {
            max-width: 400px;
        }
    }
    .round-mini-button {
        width: 40px;
        height: 40px;
        border-radius: 50%;
    }
    .arrow-down {
        display: none;
    }
    .break-line-mobile {
        display: flex;
    }
}

